--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -111,9 +111,9 @@ body{
 /* ................................Main................................ */
 .intro{
     min-height: 100vh;
-    background: url(/assets/img/intro-bg.jpg) no-repeat center;
+    background: url(/assets/img/intro/intro-bg.jpg) no-repeat center;
     background-size: cover;
-    padding-top: 263px;
+    padding-top: 262px;
 }
 .intro__title{
     font-weight: 500;
@@ -466,6 +466,40 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
+}
+/* ........................footer..................... */
+.footer{
+    background: #0E1D28;
+    padding: 119px 0;
+}
+.footer__item{
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer__logo{
+    width: 50%;
+}
+.footer__nav{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.footer__menu-title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+.footer__menu-link{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.footer__menu-link:hover, .footer__menu-link:focus, .footer__menu-link:active{
+    opacity: 0.65;
 }
 
 
