--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -111,7 +111,7 @@ body{
 /* ................................Main................................ */
 .intro{
     min-height: 100vh;
-    background: url(/assets/img/intro/intro-bg.jpg) no-repeat center;
+    background: url(../img/intro/intro-bg.jpg) no-repeat center;
     background-size: cover;
     padding-top: 262px;
 }
