--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -139,7 +139,7 @@ body{
 .search-form__field{
     width: 297px;
     background-color: transparent;
-    background: url(/assets/img/svg/circle-icon.svg) no-repeat left top;
+    background: url(../img/svg/circle-icon.svg) no-repeat left top;
     block-size: 20px;
     border: none;
     border-bottom: 2px solid #BFC0C5;
@@ -232,11 +232,11 @@ body{
     color: #006DFE;
     text-transform: uppercase;
     text-decoration: none;
-    background: url(/assets/img/svg/arrow-right-icon.svg) no-repeat 95% center;
+    background: url(../img/svg/arrow-right-icon.svg) no-repeat 95% center;
     transition: 0.2s;
 }
 .benefits__card-more:hover, .benefits__card-more:focus{
-    background: url(/assets/img/svg/arrow-right-icon.svg) no-repeat right center;
+    background: url(../img/svg/arrow-right-icon.svg) no-repeat right center;
 }
 /* ...................................Places................................*/
 .places{
@@ -259,7 +259,7 @@ body{
     color: #006DFE;
     text-transform: uppercase;
     text-decoration: none;
-    background: url(/assets/img/svg/arrow-right-icon.svg) no-repeat right center;
+    background: url(../img/svg/arrow-right-icon.svg) no-repeat right center;
     transition: 0.2s;
     padding-right: 59px;
 }
@@ -359,7 +359,7 @@ body{
     text-decoration: none;
     text-transform: uppercase;
     text-decoration: none;
-    background: url(/assets/img/svg/arrow-right-icon.svg) no-repeat right center;
+    background: url(../img/svg/arrow-right-icon.svg) no-repeat right center;
     transition: 0.2s;
     padding-right: 59px;
 }
@@ -414,7 +414,7 @@ body{
     font-size: 16px;
     line-height: 24px;
     padding-right: 20px;
-    background: url(/assets/img/svg/heart-icon.svg) no-repeat right;
+    background: url(../img/svg/heart-icon.svg) no-repeat right;
     margin-right: 14px;
 }
 .top__card-comments-value{
@@ -423,7 +423,7 @@ body{
     font-size: 16px;
     line-height: 24px;
     padding-right: 23px;
-    background: url(/assets/img/svg/comment-icon.svg) no-repeat right;
+    background: url(../img/svg/comment-icon.svg) no-repeat right;
 }
 .top__card-desc{
     font-weight: 400;
