--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -92,7 +92,12 @@ body{
     flex-wrap: wrap;
     align-items: flex-end;
     justify-content: space-between;
-    margin-top: 62px;
+    padding-top: 62px;
+}
+@media screen and (max-width: 960px){
+    .header__wrapper{
+        padding-top: 28px;
+    }
 }
 .header__list{
     display: flex;
@@ -195,6 +200,11 @@ body{
         transform: translateY(-50%) rotate(-45deg);
     }
 }
+@media screen and (max-width: 500px){
+    .header__nav{
+        padding: 30px;
+    }
+}
 
 /* ................................Main................................ */
 .intro{
@@ -202,6 +212,12 @@ body{
     background: url(../img/intro/intro-bg.jpg) no-repeat center;
     background-size: cover;
     padding-top: 262px;
+}
+@media screen and (max-width: 960px){
+    .intro{
+        height: 100vh;
+        padding-top: 125px;
+    }
 }
 .intro__title{
     font-weight: 500;
@@ -211,6 +227,12 @@ body{
     max-width: 619px;
     margin-bottom: 22px;
 }
+@media screen and (max-width: 960px){
+    .intro__title{
+        font-style: 32px;
+        line-height: 48px;
+    }
+}
 .intro__subtitle{
     font-weight: 400;
     font-size: 16px;
@@ -218,6 +240,11 @@ body{
     color: var(--main-color);
     max-width: 546px;
     margin-bottom: 59px;
+}
+@media screen and (max-width: 960px){
+    .intro__subtitle{
+        font-size: 14px;
+    }
 }
 .search-form__info{
     display: flex;
@@ -237,6 +264,18 @@ body{
     color: var(--main-color);
     padding-top: 12px;
 }
+@media screen and (max-width: 500px) {
+    .search-form__field{
+        margin-bottom: 25px;
+        margin-right: 0;
+        width: 100%;
+        height: auto;
+        padding-bottom: 12px;
+    }
+    .search-form__field::placeholder{
+        font-size: 16px;
+    }
+}
 .search-form__field::placeholder{
     font-weight: 500;
     font-size: 18px;
@@ -255,12 +294,25 @@ body{
     color: var(--main-color);
     margin-bottom: 15px;
 }
+@media screen and (max-width: 500px){
+    .search-form__submit{
+        width: 100%;
+    }
+}
 .search-form__submit:hover, .search-form__submit:focus, .search-form__submitactive{
     background-color: #144a91;
 }
 /* ...........................................Benefits.................................. */
-.benefits{
-    padding-bottom: 121px;
+
+@media screen and (max-width: 960px){
+    .benefits{
+        padding-bottom: 75px;
+    }
+}
+@media screen and (max-width: 500px){
+    .benefits{
+        margin-bottom: 0;
+    }
 }
 .benefits__wrap{
     position: relative;
@@ -270,31 +322,63 @@ body{
     background-color: var(--main-color);
     box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
 }
+@media screen and (max-width: 960px){
+    .benefits__wrap{
+        box-shadow: none;
+    }
+}
 .benefits__cards{
+    position: relative;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-column-gap: 55px;
     padding: 0 100px;
+    top: 120px;
+    margin-bottom: 112px;
+}
+@media screen and (max-width: 960px) {
+    .benefits__cards{
+        padding: 0 15px;
+        grid-column-gap: 35px;
+    }
 }
 .benefits__title{
     width: 100%;
     position: absolute;
-    top: 0;
+    /* top: 0; */
     left: 0;
     transform: translateY(-100%);
     font-weight: 500;
     font-size: 35px;
     line-height: 42px;
     padding: 93px 100px 88px 100px;
-    background-color: var(--main-color);    
+    background-color: var(--main-color);   
+    margin-top: 153px; 
+    margin-bottom: 120px;
+}
+@media screen and (max-width: 960px){
+    .benefits__title{
+        padding: 45px 15px;
+    } 
 }
 .benefits__card{
     grid-column: span 1;
     padding-bottom: 121px;
 }
+@media screen and (max-width: 960px){
+    .benefits__card{
+        padding-bottom: 60px;
+        grid-column: span 3;
+    }
+}
 .benefits__card-pic{
     margin-bottom: 37px;
     max-width: 66px;
+}
+@media screen and (max-width: 960px){
+    .benefits__card-pic{
+        margin-bottom: 30px;
+    }
 }
 .benefits__card-thumb{
     display: block;
@@ -311,6 +395,11 @@ body{
     line-height: 24px;
     margin-bottom: 39px;
 }
+@media screen and (max-width: 500px){
+    .benefits__card-desc{
+        margin-bottom: 20px;
+    }
+}
 .benefits__card-more{
     display: inline-block;
     padding-right: 59px;
@@ -322,6 +411,12 @@ body{
     text-decoration: none;
     background: url(../img/svg/arrow-right-icon.svg) no-repeat 95% center;
     transition: 0.2s;
+    margin-bottom: 112px;
+}
+@media screen and (max-width: 960px){
+    .benefits__card-more{
+        margin-bottom: 0;
+    }
 }
 .benefits__card-more:hover, .benefits__card-more:focus{
     background: url(../img/svg/arrow-right-icon.svg) no-repeat right center;
@@ -330,8 +425,22 @@ body{
 .places{
     margin-bottom: 131px;
 }
+@media screen and (max-width: 767px){
+    .places{
+        margin-bottom: 76px;
+    }
+}
 .places__title{
     margin-right: 15px;
+}
+@media screen and (max-width: 500px){
+    .section-title{
+        margin-bottom: 25px;
+    }
+    
+    .section-title::after{
+        width: 78px;
+    }
 }
 .places__caption{
     display: flex;
@@ -357,13 +466,24 @@ body{
 .places__cards{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-gap: 10px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
 }
 .places__card_size_lg{
     grid-column: span 3;
 }
+@media screen and (max-width: 960px){
+    .places__card_size_lg{
+        grid-column: span 6;
+    } 
+}
 .places__card_size_small{
     grid-column: span 2;
+}
+@media screen and (max-width: 960px){
+    .places__card_size_small{
+        grid-column: span 6; 
+    }
 }
 .places__card-pic{
     width: 100%;
@@ -373,6 +493,11 @@ body{
 .places__card-pic_size_lg{
     height: 354px;
     width: 100%;
+}
+@media screen and (max-width: 767px){
+    .places__card-pic_size_lg, .places__card-pic_size_small{
+        height: 230px;
+    }
 }
 .places__card-pic_size_small{
     width: 100%;
@@ -416,15 +541,41 @@ body{
     z-index: 4;
 }
 /* .........................................Tours................................................ */
+@media screen and (max-width:767px){
+    .tour__pic, .tour__info{
+        grid-column:span 2;
+    }
+    .tour__pic{
+        margin-bottom: 12px;
+    }
+    .tour__pic_mob-first{
+        grid-row-start: -1;
+    }
+}
 .tours{
     margin-bottom: 139px;
+}
+@media screen and (max-width: 767px){
+    .tours{
+        margin-bottom: 78px; 
+    }
 }
 .tours__tour{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0 108px;
+    grid-column-gap: 108px;
     align-items: center;
     margin-bottom: 77px;
+}
+@media screen and (max-width: 960px){
+    .tours__tour{
+        grid-column-gap: 35px ;
+    }
+}
+@media screen and (max-width: 767px){
+    .tours__tour{
+        margin-bottom: 50px;
+    }
 }
 .tour__title{
     font-weight: 500;
@@ -432,11 +583,21 @@ body{
     line-height: 40px;
     margin-bottom: 85px;
 }
+@media screen and (max-width: 960px){
+    .tour__title{
+        margin-bottom: 15px;
+    }
+}
 .tour__desc{
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 58px;
+}
+@media screen and (max-width: 960px){
+    .tour__desc{
+        margin-bottom: 15px;
+    }
 }
 .tour__more{
     font-weight: 400;
@@ -457,16 +618,38 @@ body{
 .tour__info{
     padding-left: 47px;
 }
+@media screen and (max-width: 960px){
+    .tour__info{
+        padding-left: 0px;
+    }
+}
 /* .....................................................Top..................................... */
 .top{
     margin-bottom: 86px;
 }
+@media screen and (max-width: 767px){
+    .top{
+        margin-bottom: 76px;
+    }
+}
 .top__title{
-    margin-bottom: 56px;
+    margin-bottom: 54px;
 }
 .top__card{
     display: flex;
     flex-direction: column;
+    grid-column: span 2;
+}
+@media screen and (max-width: 960px){
+    .top__card{
+        grid-column: span 3;
+        margin-bottom: 35px;
+    }
+}
+@media screen and (max-width: 767px){
+    .top__card{
+        grid-column: span 6;
+    }
 }
 .top__card-pic{
     position: relative;
@@ -486,8 +669,18 @@ body{
 }
 .top__cards{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 57px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 57px;
+    grid-row-gap: 57px;
+}
+@media screen and (max-width: 960px){
+    .top__cards{
+        grid-column-gap: 25px;
+        grid-row-gap: 25px;
+    }
+}
+.top__card-thumb{
+    width: 100%;
 }
 .top__card-title{
     margin: 0 auto 0 0;
@@ -518,6 +711,11 @@ body{
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 31px;
+}
+@media screen and (max-width: 767px){
+    .top__card-desc{
+        margin-bottom: 15px;
+    }
 }
 .top__card-more{
     width: 118px;
@@ -560,6 +758,18 @@ body{
     background: #0E1D28;
     padding: 119px 0;
 }
+@media screen and (max-width: 960px){
+    .footer{
+        padding: 60px;
+    }
+}
+@media screen and (max-width: 767px){
+    .footer{
+        padding: 30px 0 15px 0;
+    }
+}
+
+
 .footer__item{
     display: flex;
     flex-wrap: wrap;
@@ -567,12 +777,28 @@ body{
 .footer__logo{
     width: 50%;
 }
+@media screen and (max-width: 767px){
+    .footer__logo{
+        width: 100%;
+        margin-bottom: 13px;
+    }
+}
 .footer__nav{
     width: 50%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
+@media screen and (max-width: 767px){
+    .footer__nav{
+        width: 100%;
+    }
+    .footer__menu{
+        width: 50%;
+        margin-bottom: 24px;
+    }
+}
+
 .footer__menu-title{
     font-weight: 500;
     font-size: 18px;
