--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -118,12 +118,29 @@ body{
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
 }
+
+@media screen and (max-width: 767px) {
+    .header__list {
+        width: 100%;
+        height: 100vh;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
 .header__item{
     margin-right: 82px;
 }
 .header__item:last-child{
     margin-right: 0;
 }
+
+@media screen and (max-width: 767px)  {
+    .header__item {
+        text-align: center;
+    }
+}
+
 .header__link{
     font-weight: 400;
     font-size: 18px;
